Bug 474691 - UI: glitch in layout of the "resize" tab contents in the "export advanced" dialog
Summary: UI: glitch in layout of the "resize" tab contents in the "export advanced" di...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.2.0-beta2
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-19 13:20 UTC by Deif Lou
Modified: 2024-11-04 16:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video of the issue (325.24 KB, video/mp4)
2023-09-19 13:20 UTC, Deif Lou
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Deif Lou 2023-09-19 13:20:19 UTC
Created attachment 161721 [details]
video of the issue

SUMMARY
The contents of the "resize" tab in the "export advanced" dialog are not laid out correctly the second+ time one goes to that tab.

STEPS TO REPRODUCE
1. Open the "export advanced" dialog and choose a file name and a format that has options.
2. If the format has options then 2 tabs appear: "options" and "resize". click on the "resize" tab. The widgets appear to be correctly laid out.
3. Go to the "options" tab and return to the "resize" tab. The widgets appear displaced to the bottom right (it may be necessary to have an enlarged dialog to appreciate). The widgets return to their correct position once the user resizes the dialog, but are incorrectly laid out again if one goes to the "options" tab and returns to the "resize" tab.
Comment 1 Dmitry Kazakov 2023-09-19 13:48:26 UTC
Thats a really funny bug, thank you! :)
Comment 2 Dmitry Kazakov 2024-11-04 16:32:38 UTC
Git commit 76420af7c5f84c811157c9db57bbe72134029ae9 by Dmitry Kazakov.
Committed on 04/11/2024 at 16:32.
Pushed by dkazakov into branch 'master'.

Extract image resize widget into a separate class

It is necessary for the advanced export feature

M  +1    -0    libs/ui/CMakeLists.txt
M  +9    -10   libs/ui/KisImportExportManager.cpp
M  +7    -408  libs/ui/imagesize/dlg_imagesize.cc
M  +1    -51   libs/ui/imagesize/dlg_imagesize.h
C  +45   -32   libs/ui/imagesize/wdg_imagesize.cc [from: libs/ui/imagesize/dlg_imagesize.cc - 089% similarity]
C  +9    -22   libs/ui/imagesize/wdg_imagesize.h [from: libs/ui/imagesize/dlg_imagesize.h - 078% similarity]

https://invent.kde.org/graphics/krita/-/commit/76420af7c5f84c811157c9db57bbe72134029ae9