Extract image resize widget into a separate class

It is necessary for the advanced export feature

BUG:474691