libs/ui/imagesize/dlg_imagesize.h
@@ -13,21 +13,6 @@
 
 class KisFilterStrategy;
 class WdgImageSize;
-class KisDocumentAwareSpinBoxUnitManager;
-class KisSpinBoxUnitManager;
-class KisAspectRatioLocker;
-
-#include "ui_wdg_imagesize.h"
-
-class WdgImageSize : public QWidget, public Ui::WdgImageSize
-{
-    Q_OBJECT
-
-public:
-    WdgImageSize(QWidget *parent) : QWidget(parent) {
-        setupUi(this);
-    }
-};
 
 class DlgImageSize: public KoDialog
 {
@@ -35,13 +20,6 @@ class DlgImageSize: public KoDialog
     Q_OBJECT
 
 public:
-
-    static const QString PARAM_PREFIX;
-    static const QString PARAM_IMSIZE_UNIT;
-    static const QString PARAM_SIZE_UNIT;
-    static const QString PARAM_RES_UNIT;
-    static const QString PARAM_RATIO_LOCK;
-    static const QString PARAM_PRINT_SIZE_SEPARATE;
 
     DlgImageSize(QWidget * parent, int width, int height, double resolution);
     ~DlgImageSize() override;
@@ -52,36 +30,8 @@ public:
 
     KisFilterStrategy *filterType();
 
-Q_SIGNALS:
-    void sigDesiredSizeChanged(qint32 width, qint32 height, double resolution);
-
-private Q_SLOTS:
-    void slotSyncPrintToPixelSize();
-    void slotSyncPixelToPrintSize();
-    void slotPrintResolutionChanged();
-    void slotPrintResolutionUnitChanged();
-
-    void slotLockPixelRatioSwitched(bool value);
-    void slotLockPrintRatioSwitched(bool value);
-    void slotLockAllRatioSwitched(bool value);
-    void slotAdjustSeparatelySwitched(bool value);
-
 private:
-    qreal currentResolutionPPI() const;
-    void setCurrentResolutionPPI(qreal value);
-
-    void updatePrintSizeMaximum();
-
-    WdgImageSize *m_page;
-
-    QSize m_originalSize;
-
-    KisAspectRatioLocker *m_pixelSizeLocker;
-    KisAspectRatioLocker *m_printSizeLocker;
-
-    KisDocumentAwareSpinBoxUnitManager* m_widthUnitManager;
-    KisDocumentAwareSpinBoxUnitManager* m_heightUnitManager;
-    KisSpinBoxUnitManager* m_printSizeUnitManager;
+    QScopedPointer<WdgImageSize> m_page;
 };
 
 #endif // DLG_IMAGESIZE
